Filter and query context

--- a/index.html
+++ b/index.html
@@ -55,6 +55,36 @@
 					</p>
 				</section>
 
+				<section>
+					<h2>Query and filter context</h2>
+					<table>
+						<thead>
+						<tr>
+							<th>Query context</th>
+							<th>Filter context</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td>Full text search</td>
+							<td>Excat match</td>
+						</tr>
+						<tr>
+							<td>Relevance scoring</td>
+							<td>Binary yes/no</td>
+						</tr>
+						<tr>
+							<td>Relativly slow</td>
+							<td>Fast</td>
+						</tr>
+						<tr>
+							<td>Not cacheable</td>
+							<td>Cacheable</td>
+						</tr>
+						</tbody>
+					</table>
+				</section>
+
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
