What will you learn

--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
 					</section>
 
 					<section>
+						<h2>What will you learn?</h2>
+						<ul>
+							<li>Full-text search (task 0-4)</li>
+							<li>Filtering (task 5-8)</li>
+							<li>Aggregations (task 9-13)</li>
+							<li>Sorting (task 15)</li>
+							<li>Highlightning (task 16)</li>
+							<li>Pagination (task 17-18)</li>
+							</li>
+						</ul>
+					</section>
+
+					<section>
 						<h2>Tasks look like this</h2>
 						<pre><code>
 Feature: Topic of the task
