Added aggregations section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@ Feature: Topic of the task
                     <p>Resulting search term: 'quick'</p>
                 </section>
 
+				<section>
+					<section>
+						<h2>Aggregations</h2>
+					</section>
+
+					<section>
+						<h2>TODO</h2>
+					</section>
+				</section>
+
 			</div>
 
 		</div>
