Rename from quick to foo in query example

--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@ Feature: Topic of the task
                     <pre><code>
 "query": {
     "match": {
-        "title": "QUICK!"
+        "title": "FOO!"
     }
 }
                     </code></pre>
-                    <p>Resulting search term: 'quick'</p>
+                    <p>Resulting search term: 'foo'</p>
                 </section>
 
 				<section>
