Scripts are now used to run tests

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ Feature: Topic of the task
 						<ul>
 							<li>Manual installation
 								<ul>
-									<li>behave --outfile=build/tasks-results</li>
+									<li> Windows: `run-tasks.cmd`</li>
+									<li> Linux: `./run-tasks.sh`</li>
 								</ul>
 							</li>
 							<li>Docker
