Add paragraph to "Mapping" slide

--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@ Feature: Topic of the task
 					<section>
 						<h2>What is mapping?</h2>
 						<p>
-							Mapping is the process of defining how a document, and the fields it contains, are stored and indexed.
+							Mapping is the process of defining how a document, and the fields it contain, are stored and indexed.
+						</p>
+						<p>
+							This is similar to a database schema.
 						</p>
 					</section>
 
