--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@ Feature: Topic of the task
 							<tbody>
 							<tr>
 								<td>Full text search</td>
-								<td>Excat match</td>
+								<td>Exact match</td>
 							</tr>
 							<tr>
 								<td>Relevance scoring</td>
 								<td>Binary yes/no</td>
 							</tr>
 							<tr>
-								<td>Relativly slow</td>
+								<td>Relatively slow</td>
 								<td>Fast</td>
 							</tr>
 							<tr>
