Updated json document

--- a/index.html
+++ b/index.html
@@ -678,11 +678,11 @@ $curl -X PUT localhost:9200/big-one/pizza/1 --data
 				<section>
 					<section>
 						<h2>Workshop tasks</h2>
-						<h3>19 tasks - learning Query DSL</h3>
 					</section>
 
 					<section>
 						<h2>What will you learn?</h2>
+                        <p>19 tasks - learning Query DSL</p>
 						<ul>
 							<li>Full-text search (task 0-4)</li>
 							<li>Filtering (task 5-8)</li>
@@ -693,6 +693,11 @@ $curl -X PUT localhost:9200/big-one/pizza/1 --data
 							</li>
 						</ul>
 					</section>
+
+                    <section>
+                        <h2>List of pizzas</h2>
+                        <p>The data that are used during the workshop is a list of <a href="https://github.com/BouvetNord/elasticsearch-workshop/blob/master/data.json" target="_blank">pizzas</a>, with the <a href="https://github.com/BouvetNord/elasticsearch-workshop/blob/master/mapping.json" target="_blank">mapping</a></p>
+                    </section>
 
 					<section>
 						<h2>Tasks look like this</h2>
