Updated alt mulig mat desc

--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
             <section>
                 <h2>Alt Mulig Mat</h2>
                 <ul>
-                    <li>Keyword-based searching</li>
-                    <li>Structured searching, like find all "Dessert" recipes</li>
+                    <li>Text based searching</li>
+                    <li>Structured searching (get all "Dessert" recipes)</li>
                 </ul>
                 <a href="https://altmuligmat.no" target="_blank"><img data-src="images/altmuligmat.png"/></a>
             </section>
