--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 						<li class="fragment">Own experience</li>
                         <li class="fragment">How to get started</li>
 						<li class="fragment">Mapping</li>
-						<li class="fragment">Full-text and filter context</li>
+						<li class="fragment">Queries and filters</li>
 						<li class="fragment">Aggregations</li>
 						<li class="fragment">Highlightning</li>
-						<li class="fragment">Workshop tasks</li>
                     </ul>
                 </li>
+                <li class="fragment">Workshop</li>
             </ul>
             <aside class="notes">
                 <ul>
@@ -1035,7 +1035,7 @@ $curl -X PUT localhost:9200/books/computer/1 --data
 				</section>
 				<section>
 					<section>
-						<h2>Workshop tasks</h2>
+						<h2>Workshop</h2>
 					</section>
 
 					<section>
