Add aggregation slide

--- a/index.html
+++ b/index.html
@@ -710,38 +710,44 @@ $curl -X PUT localhost:9200/books/computer/1 --data
 					</section>
 
 					<section>
+						<ul>
+							<li>Used to perform analysis on the data</li>
+							<li>Broken into 3 "families"</li>
+							<ul>
+								<li>Metric</li>
+								<li>Bucket</li>
+								<li>Pipeline</li>
+							</ul>
+						</ul>
+					</section>
+
+					<section>
 						<table>
 							<thead>
 							<tr>
 								<th>Metric</th>
 								<th>Bucket</th>
-								<th>Pipeline</th>
 							</tr>
 							</thead>
 							<tbody>
 								<tr>
 									<td>Min</td>
 									<td>Range</td>
-									<td></td>
 								</tr>
 								<tr>
 									<td>Max</td>
 									<td>Terms</td>
-									<td></td>
 								</tr>
 								<tr>
 									<td>Sum</td>
 									<td>Histogram</td>
-									<td></td>
 								</tr>
 								<tr>
 									<td>Avg</td>
 									<td></td>
-									<td></td>
 								</tr>
 								<tr>
 									<td>Stats</td>
-									<td></td>
 									<td></td>
 								</tr>
 							</tbody>
