Fix a few typos in slides

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ $curl -X PUT localhost:9200/books/computer/1 --data
 					<section>
 						<h2>What is mapping?</h2>
 						<p>
-							Mapping is the process of defining how a document, and the fields it contain, are stored and indexed.
+							Mapping is the process of defining how a document, and the fields it contains, are stored and indexed.
 						</p>
 						<p>
 							This is similar to a database schema.
@@ -698,7 +698,7 @@ $curl -X PUT localhost:9200/books/computer/1 --data
 
                         <ul>
                             <li>Terms are typically used with filters, and requires exact match</li>
-                            <li>Full-text queries are passed through an ananlyzer, defined by the mapping</li>
+                            <li>Full-text queries are passed through an analyzer, defined by the mapping</li>
                         </ul>
                     </section>
 
