Fixes overview of tasks

--- a/index.html
+++ b/index.html
@@ -608,8 +608,7 @@ $curl -X PUT localhost:9200/books/computer/1 --data
           "type": "float",
         }
       }
-    }
-  }
+    } }
 }
                 </code></pre>
 					</section>
@@ -1050,9 +1049,11 @@ $curl -X PUT localhost:9200/books/computer/1 --data
 						<h2>What will you learn?</h2>
                         <p>19 tasks - learning Query DSL</p>
 						<ul>
-							<li>Full-text search (task 0-4)</li>
+                            <li>Intro task - match all (task 0) </li>
+							<li>Full-text search (task 1-4)</li>
 							<li>Filtering (task 5-8)</li>
 							<li>Aggregations (task 9-13)</li>
+                            <li>Combine full-text search and aggregations (task 14)</li>
 							<li>Sorting (task 15)</li>
 							<li>Highlightning (task 16)</li>
 							<li>Pagination (task 17-18)</li>
