Formatting fix in mapping example

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ $curl -X PUT localhost:9200/books/computer/1 --data
           "index": "not_analyzed"
         },
         "price": {
-          "type": "float",
+          "type": "float"
         }
       }
     } 
