--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ $curl -X PUT localhost:9200/books/computer/1 --data
 					<section>
 						<h2>What is mapping?</h2>
 						<p>
-							Mapping is the process of defining how a document, and the fields it contains, are stored and indexed.
+							Mapping is used to define how a document, and the fields it contains, are stored and indexed.
 						</p>
 						<p>
 							This is similar to a database schema.
