--- a/index.html
+++ b/index.html
@@ -702,6 +702,8 @@ $curl -X PUT localhost:9200/books/computer/1 --data
                             <li>Use queries for full-text search, or for cases where you want a relevance score</li>
                             <li>Use filters for everything else</li>
                         </ul>
+
+                        <p>Or combine them: Filter first, then query remaining docs.</p>
                     </section>
 
                 </section>
