--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </section>
 
             <section>
-                <h2>How to use Ealsticsearch?</h2>
+                <h2>How to use Elasticsearch?</h2>
 
                 <p>Commonly used in addition to another database...</p>
                 <img height="350" data-src="images/overview.png"/>
