Fix typo in agenda

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<li class="fragment">Mapping</li>
 						<li class="fragment">Queries and filters</li>
 						<li class="fragment">Aggregations</li>
-						<li class="fragment">Highlightning</li>
+						<li class="fragment">Highlighting</li>
                     </ul>
                 </li>
                 <li class="fragment">Workshop</li>
