Added more notes on eng

--- a/index.html
+++ b/index.html
@@ -52,12 +52,34 @@
 					<h1>Elasticsearch Workshop</h1>
 					<h3>2016</h3>
                     <aside class="notes">
+                        ENG:
+                        <ul>
+                            <li>
+                                Welcome to the Elasticsearch workshop...
+                            </li>
+                            <li>
+                                We will start the workshop with an presentation.
+                            </li>
+                            <li>
+                                The presentation will take about one hour... after that we will start coding...
+                            </li>
+                            <li>
+                                We'll go around to help with software installation after the presentation...
+                            </li>
+                        </ul>
+                        NOR:
                         <ul>
                             <li>
                                 Velkommen, i dag skal vi holde en Elasticsearch workshop.
                             </li>
                             <li>
-                                Welcome...
+                                Vi vil begynne workshopen med en presentasjon
+                            </li>
+                            <li>
+                                Presentasjonen vil vare i sirka en time... deretter vil vi starte å kode...
+                            </li>
+                            <li>
+                                Vi vil gå rundt å hjelpe med programvare installasjon etter presentasjonen...
                             </li>
                         </ul>
                     </aside>
@@ -84,13 +106,11 @@
             <aside class="notes">
                 ENG:
                 <ul>
-                    <li>The agenda today is as follows...</li>
-                    <li>This will take about one hour...after that we will start coding...</li>
-                    <li>We'll go around to help with software installation after the presentation...</li>
+                    <li>The agenda for the presentation is as follows...</li>
                 </ul>
                 NOR:
                 <ul>
-                    <li>Agendaen idag er som følger...</li>
+                    <li>Agendaen for presentasjonen er som følger...</li>
                 </ul>
             </aside>
         </section>
@@ -159,7 +179,7 @@
                         <li>What happens is that we create an "inverted index" of these documents (the documents are indexed, as it is called)
                         </li>
                         <li>An inverted index (which we see on the right side here now) contain all the words contained in the documents,
-                            and for every word, we lists up which documents containing the word...
+                            and for every word, we list up which documents containing the word...
                         </li>
                         <li>So the word "pizza" is found in document 0 and 2</li>
                     </ul>
@@ -347,6 +367,15 @@
 
             <section data-background="images/kokeboka4.png">
                  <aside class="notes">
+                     ENG:
+                     <ul>
+                         <li>The reason I wanted to learn about search engines were...</li>
+                        <li>I have large collected on food recipes ...</li>
+                        <li>And gradually it has become very many food recipes, nearly 400 pages ...</li>
+                        <li>That makes it almost impossible to find what you search for ...</li>
+                        <li>Eg I want to find all the main dishes containing chicken ...</li>
+                     </ul>
+                     NOR:
                     <ul>
                         <li>
                             Grunnen til at jeg ønsket å lære meg om søkemotorer var...
